--- a/Client/my-app/public/index.html
+++ b/Client/my-app/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Glass Shop</title>
+    <title>Glasses Shop</title>
     <style>
       * {
         font-family: 'K2D', sans-serif;
